@@ -1,5 +1,5 @@
 /* xml.c -- xml output.
-   $Id: xml.c,v 1.44 2003-11-24 21:01:29 dirt Exp $
+   $Id: xml.c,v 1.45 2003-11-27 11:48:08 dirt Exp $
 
    Copyright (C) 2001, 2002, 2003 Free Software Foundation, Inc.
 
@@ -145,6 +145,8 @@ element texinfoml_element_list [] = {
   { "tableterm",           0, 0, 0 }, /* not used */ /* TABLETERM */
 
   { "indexterm",           0, 1, 0 },
+
+  { "math",                0, 1, 0 },
 
   { "xref",                0, 1, 0 },
   { "xrefnodename",        0, 1, 0 },
@@ -334,6 +336,8 @@ element docbook_element_list [] = {
   { "term",                0, 0, 0 }, /* TABLETERM */
 
   { "indexterm",           0, 1, 0 }, /* INDEXTERM */
+
+  { "",                    0, 1, 0 }, /* MATH */
 
   { "xref",                0, 1, 0 }, /* XREF */
   { "link",                0, 1, 0 }, /* XREFNODENAME */
